<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/welcome_title"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/myButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/welcome_welcome_movies_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/welcome_welcome_tvshows_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/welcome_welcome_favorites_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/my_button"
        android:text="@string/welcome_subscription_button"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>